2Semestre/C/Bloco 2 Introdução ao ANTLR-20210408/bloco2/b2_02/SuffixCalculator.g4
grammar SuffixCalculator;
program : stat* EOF;
stat : expr? NEWLINE;
expr: expr expr op=('*'|'/'|'+'|'-') #operators
    | Number                        #Numbers;

Number: [0-9]+('.'[0-9]+);
NEWLINE: '\r'? '\n';
WSS : [ \t]+ -> skip;
